# astrafy-agent-tools

./: .pre-commit-config.yaml  README.md  pyproject.toml
skills/dbt/: SKILL.md
skills/dbt-best-practices/: SKILL.md
skills/dbt-best-practices/references/: architecture.md  general-rules.md  incremental-models.md  naming-and-style.md  review-checklist.md
skills/dbt-best-practices/references/layers/: 0-raw.md  1-staging.md  2-intermediate.md  2a-intermediate-dedup.md  3-datamart.md
skills/dbt/references/: architecture.md  general-rules.md  naming-and-style.md
skills/dbt/references/layers/: 0-raw.md  3-datamart.md
skills/dimensional-erd/: SKILL.md
src/: cli.py
